# PF-Animation-EQs

./: README.md  pyproject.toml
src/: _core.py  _types.py  plot.ipynb
